[metadata]
name = windlass
author = Antoni Dabek
author-email = antoni.dabek@hpe.com
summary = windlass and build docker images from git repositories and helm charts
license = Proprietary
keywords = windlass docker
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent

[files]
packages =
    windlass

[entry_points]
console_scripts =
    windlass = windlass:main

[easy_install]
