#
# (c) Copyright 2017 Hewlett Packard Enterprise Development LP
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may
# not use this file except in compliance with the License. You may obtain
# a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations
# under the License.
#

[metadata]
name = windlass
author = Antoni Dabek
author-email = antoni.dabek@hpe.com
summary = windlass and build docker images from git repositories and helm charts
license = Proprietary
keywords = windlass docker
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Programming Language :: Python
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent

[files]
packages =
    windlass

[entry_points]
console_scripts =
    windlass = windlass.windlass:main
    cipublish = windlass.cipublish:main

[easy_install]
